se agrego la opcion de reiniciar el test ante una falla

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -111,6 +111,13 @@ nlu:
     - hola
     - buenas
 
+- intent: reset
+  examples: |
+    - reset
+    - resetear
+    - restart
+    - reiniciar
+
 - intent: respuestasv
   examples: |
     - una [insignia]{"entity":"forma","value": "inanimada"}
